Fixed `.col--no-gap` in `Grid`.

--- a/components/00-base/grid/grid.scss
+++ b/components/00-base/grid/grid.scss
@@ -118,7 +118,7 @@ ul.row {
 
   &.col--no-gap {
     // Remove the offsets starting from the next breakpoint from the lowest one.
-    @include ct-breakpoint(ct-breakpoint-next($ct-grid-lowest-breakpoint, key)) {
+    @include ct-breakpoint($ct-grid-responsive-breakpoint) {
       &:not(:first-child) {
         padding-left: 0;
       }
